Revision history for libapreq

=over 4

=item 1.13 - April 18, 2003

Sync test suite uris with latest Apache::Test [Stas]

Patch mfd parser's Content-Disposition header to do case-insensitive
matches on "name" & "filename" keywords.  This feature allows uploads
from Nokia Series 60 phones to work as expected. [Oskari 'Okko' Ojala]

Patch Request.xs to revert to using pre-1.1 $upload->fh code for
pre-5.8 perls.  This patch may get backed out prior to 1.2's release,
unless it is known to resolve problems (zombies?) reported to occur 
with libapreq-1.1 uploads and pre-5.8 perls. [Joe]

=item 1.12 - February 27, 2003

do a better mod_perl version checking, including the test for mod_perl
2.0. [Stas]

Applied IKEBE Tomohiro's patch for handling %uXXXX strings.

=item 1.11 - February 27, 2003

Add req->nargs to C API to distinguish between query string and 
request body params.

=item 1.05 - January 5, 2003

Include patch and supporting documentation for OS X [David Wheeler].
Temporarily revert test suite to Apache::test. [Joe Schaefer]
Update Request.xs to avoid segfaults caused by empty file uploads
via an upload_hook. The upload_hook isn't called in this case,
which triggered a segfault in $upload->fh [Sven Geisler].

=item 1.04 - November 5, 2002

Replace autogenerated files with BUILD.sh script. 
This is necessary for OS X support via libtool & friends. 
[Joe Schaefer]

=item 1.02 - November 3, 2002

Added documentation for issues with '\0' bytes (encoded) in 
cookie strings. [Issac Goldstand]

=item 1.01

add a basic test suite [Stas Bekman]

=item 1.0 - February 21, 2002

update to Apache Software License, Version 1.1

work around bug in Mozilla 0.9.7, which fails to send a required
CRLF with each empty file field. [Joe Schaefer <joe@sunstarsys.com>]

ignore empty cookie attributes; replace ap_getword calls with
ap_getword_nulls for parsing "&" separator. brings the behavior of
Apache::Cookie closer to that of CGI::Cookie, and hopefully improves